<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_horizontal">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_back"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_gravity="start"
        android:contentDescription="@string/close"/>

    <TextView
        android:id="@+id/tv_record_audio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record_new_audio"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="24dp"/>

    <Button
        android:id="@+id/btnRecord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_recording"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btnStopRecord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop_recording"
        android:layout_marginTop="8dp"/>

    <include layout="@layout/player"/>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/upload_new_audio"
        android:layout_marginTop="8dp"/>
</LinearLayout>
