<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/title_1" />

    <TextView
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/title_2" />

    <TextView
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/title_3"
        android:layout_marginBottom="32dp"/>

    <ImageView
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:src="@mipmap/ic_logo"
        android:contentDescription="@string/yclit_logo"
        android:layout_gravity="center"
        android:layout_marginBottom="32dp" />

    <!-- Campo username con icona -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_user"
                android:contentDescription="@string/username_icon" />

            <EditText
                android:id="@+id/username"
                android:layout_width="0dp"
                android:layout_height="48sp"
                android:layout_weight="1"
                android:autofillHints="username"
                android:hint="@string/username"
                android:paddingStart="8dp"
                android:inputType="text"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Campo password con icona -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_password"
                android:contentDescription="@string/password_icon" />

            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="48sp"
                android:layout_weight="1"
                android:autofillHints="password"
                android:hint="@string/password"
                android:paddingStart="8dp"
                android:inputType="textPassword"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Pulsante login -->
    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:background="@drawable/rounded_button"
        android:layout_marginTop="16dp" />


    <!-- Pulsante switch a register -->
    <Button
        android:id="@+id/btn_reg_to_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account_login"
        android:textColor="@android:color/white"
        android:background="@drawable/rounded_button"
        android:layout_marginTop="16dp" />
</LinearLayout>