<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.gms.maps.MapView
                android:id="@+id/mapView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/map_view"/>

            <ImageButton
                android:id="@+id/btn_menu"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_menu"
                android:contentDescription="@string/menu"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0"
                android:layout_marginStart="8dp" />

            <ImageButton
                android:id="@+id/btn_record_audio"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/ic_add"
                android:contentDescription="@string/add_audio"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="16dp" />

            <!-- Pulsante di ricerca (inizialmente visibile) -->
            <ImageButton
                android:id="@+id/btn_search"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/ic_search"
                android:contentDescription="@string/search"
                app:layout_constraintEnd_toStartOf="@id/btn_record_audio"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="16dp"/>

            <ImageButton
                android:id="@+id/btn_close_search"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/ic_back"
                android:contentDescription="@string/close_search"
                app:layout_constraintEnd_toStartOf="@id/btn_record_audio"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="16dp"
                android:visibility="gone"/>

            <EditText
                android:id="@+id/search_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:hint="@string/search_address"
                android:inputType="text"
                android:importantForAccessibility="yes"
                android:focusable="true"
                android:padding="10dp"
                android:layout_marginHorizontal="10dp"
                app:layout_constraintTop_toBottomOf="@id/btn_record_audio"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@android:color/white"
                android:layout_marginTop="16dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:background="?android:attr/colorBackground"
        app:menu="@menu/drawer_menu" />
</androidx.drawerlayout.widget.DrawerLayout>